Fix alert icon alignment
[ci skip]

--- a/src/web/assets/cp/src/css/_cp.scss
+++ b/src/web/assets/cp/src/css/_cp.scss
@@ -318,6 +318,10 @@ a#system-info {
     padding-inline: 24px;
     box-shadow: inset 0 -1px 0 0 var(--red-100);
 
+    span[data-icon]::before {
+      margin-block-start: -3px !important;
+    }
+
     .resolvable-alert-buttons {
       margin-block-start: var(--m);
     }
